--- a/README
+++ b/README
@@ -11,6 +11,7 @@ Bugs
 
 To Do
 
+- show date/time of bingo session on various pages, home, show, game
 - in general, user can see if session is public or their own
 - can use edit/nextball only if its theirs
 - only allow creater of game to advance to next ball
