--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Test site on Heroku is here http://bingo-caller.heroku.com/games
 
 To Do
 
-- call out numbers, <audio>
+- audio files for 13-90
 
 - js to auto advance, pause option
 
