--- a/README
+++ b/README
@@ -22,5 +22,8 @@ To Do
 - add users and link games to users, public/private options
 - only allow creating user to advance balls in a game
 
+- keep a track of winners (first line/full house), perhaps have concept of session/evening, so if a little money
+is involved, can keep track of things...
+
 
 - allow to create/upload new sound files from website... how to check the sounds are good/valid...
