--- a/README
+++ b/README
@@ -7,14 +7,16 @@ Test site on Heroku is here http://bingo-caller.heroku.com/games
 
 To Do
 
-- show games for session
-
+- in general, user can see if session is public or their own
+- can edit/nextball only if its theirs
 - only allow creater of game to advance to next ball
+
 
 - keep a track of players/winners (first line/full house), perhaps have concept of session/evening, so if a little money
 is involved, can keep track of things... also number of cards played per game
 
 - button to start same kind of game again (eg after house/bingo called)
+
 
 - ensure auto/page reload only happens after number is called/audio
 
