--- a/README
+++ b/README
@@ -4,6 +4,10 @@ The aim is for it to run on the iPad, anywhere else is a bonus, for now.
 
 Test site on Heroku is here http://bingo-caller.heroku.com/games
 
+Bugs
+
+- list of players for house/bingo shows all players
+- same_again not copying players across.
 
 To Do
 
