--- a/README
+++ b/README
@@ -17,6 +17,7 @@ To Do
 - only allow creater of game to advance to next ball
 - honour public/private game flag, only show your games and public games
 
+- want different layout/font size for ipad vs web - how to do that?
 
 - players tracked by session, perhaps track by caller.
 
