--- a/README
+++ b/README
@@ -9,27 +9,27 @@ To play a game, its expected that the players will have bingo cards and markers.
 Conversion to Backbone/Coffeescript - core is done, working on peripheral items
 Outstanding:
 - make summary page dynamic as well
-- get player info for line/house popup from correct model and bind to it
-- correctly show who won line/house after update
 - make house/line dialog backbone'd
+- turn off auto mode after game won
+
+Bugs 4 Today
+- on new game reset auto (turn off when starting a new game)
 
 Bugs
-- disable auto advance when winner line/house dialog open
 - flash notice/error not appearing correctly
 - added rails admin, which lets logged in users view everything, need to amend it to provide a scoped view, ie only users sessions/games etc.
 
 To Do
-- error message when no players defined if trying to do winner of line/house
-- show net winnings (money won less money spent )
 - joint/multiple winners (currently all db/views assume only 1 person can win - this is not true)
-- on new game reset auto (turn off when starting a new game)
-- stats of number games won lines/bingos
 - track what people put into kitty, eg if no change - for example Joe only has a fiver, no coins, track his money
-- dont recall number on reload, or use js for some actions (currently when you click some of the buttons, the numbers are re-called - gets confusing).
 - option to void line/house (basically, there is no winner, carry forward prize pool to next game)
+
+- error message when no players defined if trying to do winner of line/house
+- dont recall number on reload, or use js for some actions (currently when you click some of the buttons, the numbers are re-called - gets confusing).
 - no auto page reload when mouse is moving (perhaps need 5seconds or so quiet time before starting)
 - ability to amend who won a game/line
 - ability to amend the prizes per game 
+- show net winnings (money won less money spent )
 - show winnings per game
 - show date/time of bingo session on various pages, home, show, game
 - in general, user can see if session is public or their own
