--- a/README
+++ b/README
@@ -4,9 +4,12 @@ The aim is for it to run on the iPad, anywhere else is a bonus, for now.
 
 Test site on Heroku is here http://bingo-caller.heroku.com/games
 
-To play a game, its expected that the players will have bingo cards and markers.  This site will then track the balls called, and who has won.
+To play a game, its expected that the players will have bingo cards and markers.  This site will then track the balls called, who has won and winnings, if played for money.
+
 
 Conversion to Backbone/Coffeescript - core is done, working on peripheral items
+
+
 Outstanding:
 - make summary page dynamic as well
 - make house/line dialog backbone'd
